Fix dropdown cut off on table content

--- a/resources/sass/custom-style/_shared-styles.scss
+++ b/resources/sass/custom-style/_shared-styles.scss
@@ -9,3 +9,8 @@
     padding: 1rem;
     background-color: inherit;
 }
+
+// fix for dropdown behind table content
+.int-table {
+    overflow: visible !important;
+}
